--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,5 @@ ACCESS_TOKEN_EXPIRE_MINUTES=60
 CORS_ORIGINS=http://localhost:5173
 
 DEBUG_PARSING=true
+
+TESSERACT_CMD=C:\Program Files\Tesseract-OCR\tesseract.exe
